tests/compile_fail/near_integer.cc
// SPDX-License-Identifier: MIT
#include <umitest/check.hh>

void test() {
    umi::test::check_near(1, 2);
}
